Change .env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_STRING="postgresql+psycopg2://username:password@0.0.0.0:5432/yourdb"
-ALEMBIC_DB_URL="postgresql+psycopg2://username:password@0.0.0.0:5432/yourdb"
+DB_STRING="postgresql+psycopg2://username:password@db:5432/yourdb"
+ALEMBIC_DB_URL="postgresql+psycopg2://username:password@db:5432/yourdb"
 DEBUG=True
 EMAIL_APP_PASSWORD="key"
 APP_EMAIL_ADDRESS="email@yourdomain.com"
