Fix: update .env.example to use asyncpg instead of psycopg2 for the app

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_STRING="postgresql+psycopg2://username:password@db:5432/yourdb"
+DB_STRING="postgresql+asyncpg://username:password@db:5432/yourdb"
 ALEMBIC_DB_URL="postgresql+psycopg2://username:password@db:5432/yourdb"
 DEBUG=True
 EMAIL_APP_PASSWORD="key"
